CSS/cssfunds.css
body {
    font-family: Helvetica, Arial, Helvetica, sans-serif;
    background-color: rgb(9, 9, 77);
    color: white;
}

.header {
    font-size: 16px;
    font-weight: bold;
    text-align: center;
    
}

.warning {
    font-size: 8px;
    color: dodgerblue;
    text-align: center;
}

 table {
    margin: 20px auto;
    width: 75%;
    text-align: center;
    border: 1px solid black;
 }

 .title th {
    border: 1px solid black;
    background-color: deepskyblue;
    color: black;
 }

  .one {
   color: black;
    background-color: lightsteelblue;
 }

 .two{
    color: black;
    background-color: steelblue;
 }

 .typedescription {
    font-size: 10px;
 }

 .definition {
   text-align: center;
   font-size: 16px;
 }

 .question {
   font-size: 24px;
 }

